[gd_scene load_steps=12 format=2]

[ext_resource path="res://Characters/EnemyBasic/enemybasicsprtsht.png" type="Texture" id=1]
[ext_resource path="res://Characters/Hitboxes/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Characters/EnemyBasic/basicenemy.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Shoot"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
}, {
"args": [  ],
"method": "shoot_finished"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "WalkLeft"
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "WalkRight"
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 13, 14 )

[sub_resource type="CapsuleShape2D" id=6]
radius = 28.0

[sub_resource type="CapsuleShape2D" id=7]
radius = 28.0

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 10, 14.0182 )

[node name="BasicEnemy" type="KinematicBody2D"]
position = Vector2( 166.233, -70.6353 )
collision_layer = 8
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 10
frame = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )
anims/Shoot = SubResource( 2 )
anims/WalkLeft = SubResource( 3 )
anims/WalkRight = SubResource( 4 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="DetectionRight" parent="." instance=ExtResource( 2 )]
collision_layer = 16

[node name="CollisionShape2D" parent="DetectionRight" index="0"]
self_modulate = Color( 1, 1, 1, 0.258824 )
position = Vector2( -25.4193, -2.67572 )
shape = SubResource( 6 )

[node name="DetectionLeft" parent="." instance=ExtResource( 2 )]
collision_layer = 16

[node name="CollisionShape2D" parent="DetectionLeft" index="0"]
modulate = Color( 1, 1, 1, 0.258824 )
position = Vector2( 15, -2.67572 )
shape = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 8 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="DetectionRight" to="." method="_on_DetectionRight_area_entered"]
[connection signal="area_entered" from="DetectionLeft" to="." method="_on_DetectionLeft_area_entered"]

[editable path="Hurtbox"]
[editable path="DetectionRight"]
[editable path="DetectionLeft"]
